# fx-volatility-trading-system

./: .dockerignore  .env.example  .gitattributes  .gitignore  .importlinter  BTCUSDT_5m.xlsx  CHANGELOG.md  Dockerfile  EURUSD_OHLCV_2015_2025.csv  FX Derivatives Interface.ipynb  LICENSE  LSTM_Strategy.ipynb  Project_Structure.xmind  README.md  SECURITY.md  The.Deer.Hunter.1978.1080p.HDDVD.x265.HEVC.EAC3.srt  Tickets  api-requests.http  app.py  architecture_livetrading.drawio  architecture_research.drawio  cmd_ec2_connect.bat  config.yml  cpp_note.md  dashboard_vol_additions.md  dataflow_livetrading.drawio  db_config.py  db_schema.drawio  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml  favoris_20_05_2025.html  fxvol.bat  git_command.md  greek-limits-spec.md  lstm_model.pth  option_strategy.ipynb  panel_variables_ib_requests.txt  pyproject.toml  pytest.ini  (+20 more)
.claude/: settings.local.json
.github/: CONTRIBUTING.md  DECOMPOSITION.md  ISSUE_PROTOCOL.md  PROJECT_BOARD.md  WORKFLOW.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  bug_report.yml  chore.yml  config.yml  feature.yml  feature_request.yml
.github/workflows/: auto-label.yml  build.yml  ci.yml  codeql.yml  deploy.yml  git-congif.yml  python-tests.yml  security-scan.yml  tests.yml
Project/: 1_Fetcher_Pipeline.ipynb  2_Feature&Label_ Creator_Pipeline.ipynb  3_Data_Analysis_Pipeline.ipynb  4_LSTM_Pipeline.ipynb  Fetcher_Pipeline.ipynb  LSTM_Pipeline.ipynb  best_model.pt  run_app.ipynb  run_app.py
Project/Config/: LoggerConfig.py
Project/Data/: BTCUSDT_01-01-2025_24-04-2025_5m.csv  DataAnalysis.py  DataFetcher.py  Data_Fetcher.py  Features.py  Labels.py  Preprocessing.py
Project/Models/: LSTMModel.py  LSTM_Model.py
Project/Pipeline/: 1_Fetcher_Pipeline.ipynb  2_Feature&Label_ Creator_Pipeline.ipynb  3_Data_Analysis_Pipeline.ipynb  4_LSTM_Pipeline.ipynb
Project/Trainer/: LSTMTrainer.py
Project/UI/: Bin.py  MainWindow.py
Project/pipeline/: 1_Fetcher.ipynb  2_feature_label.ipynb  3_data_analysis.ipynb  4_lstm.ipynb
Project/test/: BTCUSDT_23-06-2025_27-06-2025_1m.csv  Test2.ipynb  option_strategy.ipynb  python_research_doc.ipynb
Rapport_de_stage/: Fiche déval RDS - promo 2025.docx  Fiche déval Soutenance - promo 2025 (1).docx  Fiche dévaluation entreprise - promo 2025.docx  README2.md  Rapport de stage de fin détudes Page de Garde - Promo 2025.docx
Research/: 2_feature_label.ipynb  option_strategy.ipynb
Schemes/: app_launch_only_flow.drawio  dataflow_ib_client_requests.drawio  ib_client_ticks_send_receive.drawio
api/: __init__.py  config.py  main.py
api/middleware/: rate_limit.py  timing.py
api/models/: analytics.py  vol.py
api/routers/: __init__.py  analytics.py  cockpit.py  portfolio.py  vol.py
api/services/: __init__.py  analytics_service.py  portfolio_service.py  pricing_service.py  vol_service.py
api/ws/: __init__.py  (+1 more)
config/: fop_expiries.json  fop_strikes.json  option_chains.json  status_panel_settings.json  vol_config.json
docs/: API_ENDPOINTS.md  AUDIT_DB_API.md  BACKEND_ARCHITECTURE.md  BRANCH_PROTECTION.md  CODEQL_ALERTS_REMEDIATION.md  CONFIG.md  DEPLOYMENT.md  DEV_PIPELINE_PORTFOLIO.md  DOCUMENTATION_STANDARD.md  IB_OPERATIONS.md  IB_ORDER_OPS.md  LGTM_IMPLEMENTATION_SPEC.md  ORDERS_POSITIONS_AUDIT.md  ORDER_EXECUTION.md  ORDER_PIPELINE.md  PERFORMANCE.md  POSITIONS_TRUTH.md  README.md  SPOT_TRADE_PANEL_PLAN.md  THREADS.md  UI.md  VOL_DASHBOARD.md  VOL_DISCREPANCY_REPORT.md  VOL_ENGINE_REFERENCE.md  VOL_MODEL.md  VOL_MODELS.md  VOL_MODEL_REFACTOR_PLAN.md  VOL_SYSTEM.md  VOL_TRADING_USER_GUIDE.md  branch-protection.md  container_deps.md  db-schema-target.md  db-schema-theme1-plan.md  db-schema-theme4-plan.md  db-schema.md  db_schema_drift_workflow.md  docker-cheatsheet.md  portfolio-data-flow.md  preventing-spaghetti-code.md  project-architecture.md  (+6 more)
frontend/: .eslintrc.cjs  LIVE_UI_DESIGN_BRIEF.md  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
obs/: loki.yml  otel-collector.yml  prometheus.yml  promtail.yml  tempo.yml
persistence/: alembic.ini
requirements/: base.txt  ib.txt  quant.txt  writer.txt
research/: 3_data_analysis.ipynb  4_lstm.ipynb  python_research_doc.ipynb
scripts/: RUN_LOCAL_STACK.md  admin_config_smoke.ipynb  backfill_iv_history_for_gmm.py  db_apply.py  db_downgrade.sh  db_new_revision.py  db_reset.py  db_rollback.py  db_upgrade.sh  down.ps1  down.sh  dump_openapi.py  fastapi_smoke.ipynb  future_booking.ipynb  future_booking.py  fxvol.ps1  gmm_diagnostic.py  ib_client_output_probe.ipynb  list_fop-strikes.py  list_fop_expiries.py  list_fop_strikes.ipynb  load_secrets.ps1  option_booking.ipynb  option_booking.py  put_secrets.ps1  redis_bus_smoke.ipynb  run_api.ps1  run_api.sh  seed_events_manual.py  start_stack.ps1  up.ps1  up.sh  vol_fair.ipynb  vol_fair_output.csv  vol_fair_step2.py  vol_mid.ipynb  vol_mid_output.csv  vol_mid_step1.py
shared/: config.py  db_queue.py  ib_connection.py  redis_client.py
src/: app.py  client_roles.py  controller.py  controller_settings.py
tests/: STRUCTURE.md  conftest.py  test_alembic_migrations.py  test_api_analytics.py  test_api_bootstrap.py  test_api_health.py  test_api_portfolio.py  test_api_pricing.py  test_api_vol.py  test_api_ws_endpoints.py  test_api_ws_manager.py  test_async_db_writer.py  test_async_db_writer_live.py  test_bs_pricer.py  test_build_workflow.py  test_bus_keys.py  test_bus_live.py  test_bus_publisher.py  test_chart_panel.py  test_compose_up.py  test_controller.py  test_controller_consumer_mode.py  test_controller_persistence.py  test_controller_settings.py  test_core_bs.py  test_core_vol.py  test_deploy_workflow.py  test_docker_compose_syntax.py  test_ib_client.py  test_ib_client_config.py  test_ib_integration_smoke.py  test_integration_marker.py  test_logger_config.py  test_market_data_engine.py  test_market_data_worker.py  test_nginx_config_syntax.py  test_openapi_schema_stable.py  test_order_executor.py  test_order_ticket_panel.py  test_order_worker.py  (+12 more)
(+926 files in other folders)
